package com.padroes.command;

public interface Comando {
    void executar();
    void desfazer();
}
